CMMParser.java
/* Generated By:JavaCC: Do not edit this line. CMMParser.java */
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.InputStream;
import java.util.ArrayList;

public class CMMParser implements CMMParserConstants {
    static SymbolTable table = new SymbolTable();
    static int level = 0;
  public static void main(String args[]) throws ParseException {
        try {
            InputStream inputstream = new FileInputStream("test.c");
            CMMParser parser = new CMMParser(inputstream);
            parser.procedure();
        }catch (Exception e){
            System.err.println(e);
        }
    }

  static final public void procedure() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      Statement();
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_2(3)) {
      SequenceStatement();
    } else if (jj_2_3(3)) {
      IfStatement();
    } else if (jj_2_4(3)) {
      While();
    } else if (jj_2_5(3)) {
      For();
    } else if (jj_2_6(3)) {
      Read();
    } else if (jj_2_7(3)) {
      Write();
    } else if (jj_2_8(3)) {
      StatementBlock();
    } else if (jj_2_9(3)) {
      DeclareFunction();
    } else if (jj_2_10(3)) {
      FunctionCall();
    } else if (jj_2_11(3)) {
      AssignStatement();
    } else if (jj_2_12(3)) {
      Return();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void type() throws ParseException {
    if (jj_2_13(3)) {
      jj_consume_token(INT);
    } else if (jj_2_14(3)) {
      jj_consume_token(REAL);
    } else if (jj_2_15(3)) {
      jj_consume_token(VOID);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//顺序
  static final public void SequenceStatement() throws ParseException {
    if (jj_2_16(3)) {
      Declare();
    } else if (jj_2_17(3)) {
      AssignStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMI);
  }

  static final public void Declare() throws ParseException {
                   Token tk; String name;Symbol tmp;
    type();
    tk = jj_consume_token(IDENTIFIERS);
    name = tk.image;
    tmp = new Symbol(level,name);
    try{
    table.registerSymbol(tmp);
    }catch(Exception e){
        e.printStackTrace();
    }
    if (jj_2_18(3)) {
      jj_consume_token(ASSIGN);
      expression();
    } else {
      ;
    }
    label_2:
    while (true) {
      if (jj_2_19(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      tk = jj_consume_token(IDENTIFIERS);
         name = tk.image;
         tmp = new Symbol(level,name);
        try{
            table.registerSymbol(tmp);
            }catch(Exception e){
                e.printStackTrace();
            }
      if (jj_2_20(3)) {
        jj_consume_token(ASSIGN);
        expression();
      } else {
        ;
      }
    }
  }

  static final public void AssignStatement() throws ParseException {
                          Token tk;
    tk = jj_consume_token(IDENTIFIERS);
            try{
             table.getSymbol(tk.image);
        }catch(Exception e){
            e.printStackTrace();
        }
    jj_consume_token(ASSIGN);
    expression();
  }

//条件
  static final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPS);
    expression();
    jj_consume_token(RPS);
    Statement();
    if (jj_2_21(3)) {
      jj_consume_token(ELSE);
      Statement();
    } else {
      ;
    }
  }

  static final public void While() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPS);
    expression();
    jj_consume_token(RPS);
    Statement();
  }

  static final public void For() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(LPS);
    SequenceStatement();
    expression();
    jj_consume_token(SEMI);
    AssignStatement();
    jj_consume_token(RPS);
    Statement();
  }

  static final public void Read() throws ParseException {
Token tk;
    jj_consume_token(READ);
    jj_consume_token(LPS);
    tk = jj_consume_token(IDENTIFIERS);
                try{
                     table.getSymbol(tk.image);
                }catch(Exception e){
                    e.printStackTrace();
                }
    jj_consume_token(RPS);
    jj_consume_token(SEMI);
  }

  static final public void Write() throws ParseException {
    jj_consume_token(WRITE);
    jj_consume_token(LPS);
    expression();
    jj_consume_token(RPS);
    jj_consume_token(SEMI);
  }

  static final public void DeclareFunction() throws ParseException {
    Token tk;FunSymbol tmp;String name;level++;
    Symbol tmp1;
    type();
    tk = jj_consume_token(IDENTIFIERS);
        name = tk.image;
        tmp = new FunSymbol(name);
        try{
             table.registerFunSymbol(tmp);
        }catch(Exception e){
            e.printStackTrace();
        }
    jj_consume_token(LPS);
    if (jj_2_23(3)) {
      type();
      tk = jj_consume_token(IDENTIFIERS);
       name = tk.image;
       tmp1 = new Symbol(level,name);
       try{
       table.registerSymbol(tmp1);
       }catch(Exception e){
           e.printStackTrace();
       }
      label_3:
      while (true) {
        if (jj_2_22(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        type();
        tk = jj_consume_token(IDENTIFIERS);
       name = tk.image;
       tmp1 = new Symbol(level,name);
       try{
       table.registerSymbol(tmp1);
       }catch(Exception e){
           e.printStackTrace();
       }
      }
    } else {
      ;
    }
    jj_consume_token(RPS);
    StatementBlock();
  }

  static final public void StatementBlock() throws ParseException {
    jj_consume_token(LBRACE);
             level++;
    label_4:
    while (true) {
      if (jj_2_24(3)) {
        ;
      } else {
        break label_4;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
         table.deregisterSymbol(level);
         level--;
  }

  static final public void expression() throws ParseException {
    polynomial();
    if (jj_2_31(3)) {
      if (jj_2_25(3)) {
        jj_consume_token(EQ);
        polynomial();
      } else if (jj_2_26(3)) {
        jj_consume_token(NEQ);
        polynomial();
      } else if (jj_2_27(3)) {
        jj_consume_token(GT);
        polynomial();
      } else if (jj_2_28(3)) {
        jj_consume_token(GET);
        polynomial();
      } else if (jj_2_29(3)) {
        jj_consume_token(LT);
        polynomial();
      } else if (jj_2_30(3)) {
        jj_consume_token(LET);
        polynomial();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  static final public void polynomial() throws ParseException {
    term();
    if (jj_2_34(3)) {
      if (jj_2_32(3)) {
        jj_consume_token(PLUS);
      } else if (jj_2_33(3)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      polynomial();
    } else {
      ;
    }
  }

  static final public void term() throws ParseException {
    factor();
    if (jj_2_37(3)) {
      if (jj_2_35(3)) {
        jj_consume_token(DIV);
      } else if (jj_2_36(3)) {
        jj_consume_token(MUL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
    } else {
      ;
    }
  }

  static final public void factor() throws ParseException {
                Token tk;String name;boolean isFun=false;
    if (jj_2_41(3)) {
      jj_consume_token(CONSTANT);
    } else if (jj_2_42(3)) {
      jj_consume_token(LPS);
      expression();
      jj_consume_token(RPS);
    } else if (jj_2_43(3)) {
      jj_consume_token(PLUS);
      term();
    } else if (jj_2_44(3)) {
      jj_consume_token(MINUS);
      term();
    } else if (jj_2_45(3)) {
      tk = jj_consume_token(IDENTIFIERS);
      if (jj_2_40(3)) {
        jj_consume_token(LPS);
        if (jj_2_39(3)) {
          expression();
          label_5:
          while (true) {
            if (jj_2_38(3)) {
              ;
            } else {
              break label_5;
            }
            jj_consume_token(COMMA);
            expression();
          }
        } else {
          ;
        }
        jj_consume_token(RPS);
                                                                       isFun=true;
      } else {
        ;
      }
            name = tk.image;
            try{
            if(isFun){
                table.getFunSymbol(name);
            }else{
                table.getSymbol(name);
            }
        }catch(Exception e){
            e.printStackTrace();
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FunctionCall() throws ParseException {
                     Token tk;FunSymbol tmp;String name;
    tk = jj_consume_token(IDENTIFIERS);
        name=tk.image;
        tmp=new FunSymbol(name);
        try{
            table.getFunSymbol(name);
         }catch(Exception e){
            e.printStackTrace();
        }
    jj_consume_token(LPS);
    if (jj_2_47(3)) {
      expression();
      label_6:
      while (true) {
        if (jj_2_46(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(COMMA);
        expression();
      }
    } else {
      ;
    }
    jj_consume_token(RPS);
  }

  static final public void Return() throws ParseException {
    jj_consume_token(RETURN);
    expression();
    jj_consume_token(SEMI);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(IDENTIFIERS)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_scan_token(LET)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(LT)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(GET)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(GT)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(NEQ)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(EQ)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3_31() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_3R_22()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(IDENTIFIERS)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(LBRACE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_24()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RBRACE)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(VOID)) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    if (jj_scan_token(SEMI)) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_21()) return true;
    if (jj_scan_token(IDENTIFIERS)) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_46() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_21()) return true;
    if (jj_scan_token(IDENTIFIERS)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) jj_scanpos = xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_19()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(REAL)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_3R_21()) return true;
    if (jj_scan_token(IDENTIFIERS)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_22()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_13()) return true;
    return false;
  }
